--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,13 @@
     </script>
   </head>
   <body>
-    <h1>Scottish Munros</h1>
-    <label>Select a Region</label>
-      <select class="custom-select" style="width:200px" id="munro-family">
-        <option disable selected></option>
-      </select>
+    <header>
+      <h1>Scottish Munros</h1>
+      <label>Select a Region</label>
+        <select  style="width:400px" id="munro-family">
+          <option disable selected></option>
+        </select>
+    </header>
 
       <div id= "munros"></div>
   </body>
